# src/routes/marca.router.js
@@ -75,5 +75,49 @@ export default class MarcaExtendRouter extends CustomRouter {
       */
       this.controller.delete(req, res, next);
     });
+
+    this.post('/:marcaId/asignarModelo/:modeloId', ['marca.create.asignar.Modelo'], passport.authenticate('jwt'), async (req, res, next) => {
+      // #swagger.tags = ['Marcas']
+      // #swagger.path = '/marcas/{marcaId}/asignarModelo/{modeloId}'
+      // #swagger.method = 'post'
+      // #swagger.summary = 'Agregar un modelo a una marca'
+      // #swagger.description = 'Agrega un modelo específico a una marca usando sus IDs.'
+      /* #swagger.parameters['marcaId'] = { 
+        in: 'path',
+        description: 'ID de la marca',
+        required: true,
+        type: 'string'
+       }
+       #swagger.parameters['modeloId'] = { 
+        in: 'path',
+        description: 'ID del modelo a agregar',
+        required: true,
+        type: 'string'
+       }
+       #swagger.security = [{
+        "bearerAuth": []
+       }]
+      */
+      this.controller.agregarModelo(req, res, next);
+    });
+
+    this.post('/agregar-modelos', ['marca.create.asignar.Modelo'], passport.authenticate('jwt'), async (req, res, next) => {
+      // #swagger.tags = ['Marcas']
+      // #swagger.path = '/marcas/agregar-modelos'
+      // #swagger.method = 'post'
+      // #swagger.summary = 'Agregar varios modelos a una marca'
+      // #swagger.description = 'Agrega varios modelos a una marca usando un array de IDs de modelos.'
+      /* #swagger.parameters['body'] = {
+          in: 'body',
+          description: 'Objeto con idOficina y idsEquipos',
+          required: true,
+          schema: { idOficina: 'string', idsEquipos: ['string'] }
+        }
+        #swagger.security = [{
+        "bearerAuth": []
+        }] 
+      */
+      this.controller.agregarModelos(req, res, next);
+    });
   }
 }
